<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">
    <item
        android:id="@+id/diary"
        android:enabled="true"
        android:icon="@drawable/ic_book"
        android:title="@string/diary"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/chart"
        android:icon="@drawable/ic_chart"
        android:title="@string/chart"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/alarm"
        android:icon="@drawable/ic_alarm"
        android:title="@string/alarm"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/control_parameters"
        android:icon="@drawable/ic_rule"
        android:title="@string/controlParameters"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
</menu>